--- a/iCareJava/src/iHealth/ui/Creation_DMA.form
+++ b/iCareJava/src/iHealth/ui/Creation_DMA.form
@@ -175,24 +175,18 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="2" attributes="0">
-                      <EmptySpace min="22" pref="22" max="-2" attributes="0"/>
-                      <Component id="logo" max="32767" attributes="0"/>
-                      <EmptySpace min="13" pref="13" max="-2" attributes="0"/>
-                  </Group>
                   <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="103" groupAlignment="2" attributes="0">
-                              <Component id="deconnexionIconButton" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
-                              <Component id="deconnexionLabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="2" attributes="0">
+                          <Component id="logo" alignment="2" max="32767" attributes="0"/>
                           <Component id="addDMAIcon" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="addDMALabel" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="seeDMALabel" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="seeDMAIcon" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="addDMALabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                          <Component id="deconnexionLabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                          <Component id="deconnexionIconButton" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace min="13" pref="13" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -476,7 +470,7 @@
                               <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                               <Component id="numeroDeux" min="-2" pref="25" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="jLabel5" pref="675" max="32767" attributes="0"/>
+                              <Component id="jLabel5" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
