--- a/iCareJava/src/iHealth/ui/Visualisation_DMA.form
+++ b/iCareJava/src/iHealth/ui/Visualisation_DMA.form
@@ -116,7 +116,7 @@
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
-                                  <Component id="jLabel1" min="-2" pref="149" max="-2" attributes="0"/>
+                                  <Component id="jLabel1" min="-2" pref="329" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
@@ -173,24 +173,18 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="2" attributes="0">
-                      <EmptySpace min="22" pref="22" max="-2" attributes="0"/>
-                      <Component id="logo" max="32767" attributes="0"/>
-                      <EmptySpace min="13" pref="13" max="-2" attributes="0"/>
-                  </Group>
                   <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="103" groupAlignment="2" attributes="0">
-                              <Component id="deconnexionIconButton" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
-                              <Component id="deconnexionLabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="2" attributes="0">
+                          <Component id="deconnexionLabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                          <Component id="deconnexionIconButton" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="logo" alignment="2" max="32767" attributes="0"/>
                           <Component id="addDMAIcon" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="seeDMALabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                          <Component id="seeDMAIcon" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
                           <Component id="addDMALabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                          <Component id="seeDMAIcon" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="seeDMALabel" alignment="2" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace min="13" pref="13" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -321,7 +315,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Franklin Gothic Demi" size="36" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="ACCUEIL"/>
+            <Property name="text" type="java.lang.String" value="Visualisation DMA"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel5">
@@ -484,7 +478,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="100" max="32767" attributes="0"/>
+                      <EmptySpace pref="97" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -498,15 +492,16 @@
                               <EmptySpace min="-2" pref="250" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="numeroUn" min="-2" pref="30" max="-2" attributes="0"/>
-                                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="2" attributes="0">
+                                  <Component id="numeroUn" alignment="2" min="-2" pref="30" max="-2" attributes="0"/>
+                                  <Component id="jLabel6" alignment="2" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="274" max="-2" attributes="0"/>
-                              <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="numeroDeux" min="-2" pref="30" max="-2" attributes="0"/>
-                              <EmptySpace min="115" pref="319" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="2" attributes="0">
+                                  <Component id="numeroDeux" alignment="2" min="-2" pref="30" max="-2" attributes="0"/>
+                                  <Component id="jLabel5" alignment="2" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace pref="377" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -615,15 +610,15 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel16" min="-2" pref="359" max="-2" attributes="0"/>
                                   <Component id="jLabel15" min="-2" pref="488" max="-2" attributes="0"/>
-                                  <Component id="nameTextfield1" min="-2" pref="359" max="-2" attributes="0"/>
-                                  <Component id="nameTextfield3" alignment="0" min="-2" pref="359" max="-2" attributes="0"/>
-                                  <Component id="nameTextfield2" alignment="0" min="-2" pref="359" max="-2" attributes="0"/>
                                   <Component id="jLabel17" alignment="0" min="-2" pref="488" max="-2" attributes="0"/>
+                                  <Component id="nameTextfield2" pref="560" max="32767" attributes="0"/>
+                                  <Component id="nameTextfield1" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="nameTextfield3" alignment="0" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace min="0" pref="94" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="22" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
