--- a/iCareJava/src/iHealth/ui/Creation_DM.form
+++ b/iCareJava/src/iHealth/ui/Creation_DM.form
@@ -946,6 +946,9 @@
                   <Font name="Quicksand" size="24" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nomPrenomLabel1MouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="sexLabel">
               <Properties>
