--- a/iCareJava/src/iHealth/ui/Visualisation_DM_SM.form
+++ b/iCareJava/src/iHealth/ui/Visualisation_DM_SM.form
@@ -594,7 +594,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Helvetica Neue" size="24" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="M&#xe9;decin :"/>
+                <Property name="text" type="java.lang.String" value="Practicien responsable : "/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel15">
